# dsa

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  todo.txt
.github/workflows/: build_cmake.yml
catch2_test/: CMakeLists.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  Constants.cmake  LinkTimeOptimization.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Tests.cmake  TimeTrace.cmake  UnityBuild.cmake
dependencies/: CMakeLists.txt
dsa/: CMakeLists.txt
dsa/include/dsa/: algorithms.hpp  allocator_traits.hpp  binary_tree.hpp  default_allocator.hpp  dynamic_array.hpp  heap.hpp  list.hpp  memory.hpp  memory_monitor.hpp  memory_representation.hpp  node.hpp  type_detector.hpp  type_traits.hpp  vector.hpp  weak_pointer.hpp
fuzz_test/: CMakeLists.txt
gtest_test/: CMakeLists.txt  gtest_main.cpp
src/: CMakeLists.txt  main.cpp
src/gtkmm/: CMakeLists.txt
src/qt/: CMakeLists.txt
test/: CMakeLists.txt  gtest_main.cpp
test/dsa/: CMakeLists.txt  algorithm_tests.cpp  allocation_verifier_tests.cpp  allocator_traits_tests.cpp  binary_tree.cpp  binary_tree_tests.cpp  dummy_pointer.hpp  dummy_value.hpp  dynamic_array.cpp  dynamic_array_tests.cpp  element_monitor_pointer_tests.cpp  element_monitor_tests.cpp  empty_value.hpp  heap_tests.cpp  id.hpp  incomparable_value.hpp  list.cpp  list_tests.cpp  memory_monitor_tests.cpp  no_default_constructor_value.hpp  vector.cpp  vector_tests.cpp
test/dsa/dsa_runtime/: CMakeLists.txt  algorithms.cpp  dynamic_array.cpp  heap.cpp  vector.cpp
test/dsa/dsa_static/: CMakeLists.txt  allocation_verifier_tests.cpp  allocator_traits.cpp  binary_tree_tests.cpp  dummy_value.hpp  dynamic_array_tests.cpp  heap_tests.cpp  id.hpp  list_tests.cpp  memory_monitor_tests.cpp  no_default_constructor_value.hpp  vector_tests.cpp
test/dsa/dsa_static/matchers/: equals_range_matcher.hpp
test/dsa/dsa_static/utilities/: allocation_verifier.hpp  memory_monitor_handler_scope.hpp  memory_monitor_scope.hpp
test/dsa/matchers/: equals_range_matcher.hpp  memory_monitor_event_matcher.hpp
test/dsa/utilities/: allocation_verifier.hpp  memory_monitor_event_handler.hpp  memory_monitor_event_handler_fixture.hpp  memory_monitor_handler_scope.hpp
visual/: CMakeLists.txt  address.hpp  array.cpp  array.hpp  buffer.cpp  buffer.hpp  enable_event_registration_scope.cpp  enable_event_registration_scope.hpp  main.cpp  main_window.cpp  main_window.hpp  memory.hpp  memory_allocation.cpp  memory_allocation.hpp  memory_element.cpp  memory_element.hpp  memory_value.cpp  memory_value.hpp  templates.hpp  viewport.cpp  viewport.hpp  visual_monitor.hpp
visual/events/: allocated_array_event.cpp  allocated_array_event.hpp  assignment_event.cpp  assignment_event.hpp  copy_assignment_event.cpp  copy_assignment_event.hpp  deallocated_array_event.cpp  deallocated_array_event.hpp  event.cpp  event.hpp  move_assignment_event.cpp  move_assignment_event.hpp  swap_event.cpp  swap_event.hpp
visual/fonts/: sources.txt
visual/gui/: actions.cpp  actions.hpp  user_interface.cpp  user_interface.hpp
visual/gui/components/: memory.cpp  memory.hpp
visual/memory_representation/: memory.cpp  memory_allocation.cpp  memory_value.cpp  memory_value.hpp
visual/monitors/: element_monitor.hpp  memory_monitor.hpp  uninitialised_tag.hpp  weak_pointer_monitor.hpp
visual/utilities/: formatters.hpp
visual/widgets/: array_widget.cpp  array_widget.hpp  element_widget.cpp  element_widget.hpp  text_widget.cpp  text_widget.hpp  widget.cpp  widget.hpp
